test/Harper/Tests/Bad/GeneralizingATypeInPatternMatch.har
f :: (a -> b) -> a -> b;
f x = x;

g :: Bool -> Integer;
g b = {
  if b {
    return 42;
  }
  return 17;
};

h :: a -> b;
h = {
  match f g {
    // Object being matched is of type Bool -> Integer. Generalization to c -> d should fail.
    (y :: c -> d) => return y;
  }
};

main :: String;
main = h "abc";