test/Harper/Tests/Bad/GeneralizingATypeInPatternMatch.out
Error: the pattern of type `c& -> d&` cannot be used to match an expression of type `Bool -> Integer`.
During evaluation of:
(y :: c -> d)=> return y ;

Located at line 16 column 5


Execution terminated with an error: type error.